--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body,
 html {
-  height: 100%
+  height: 100%;
+  margin: 0;
 }
 html {
   background: #f1f2f3;
@@ -11,13 +12,14 @@ body {
   font-family: "Slabo 27px", sans-serif;
   font-size: 4em;
   font-weight: 500;
-  margin: 0 auto;
-  max-width: 900px;
+  -webkit-align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
+  display: -webkit-flex;
+  display: flex;
 }
 .container {
-  padding-top: 4em;
-}
-.content {
+  width: 100%;
   text-align: center;
 }
 .social {
