--- a/css/main.css
+++ b/css/main.css
@@ -23,8 +23,8 @@ body {
 }
 h1 {
   font-size: 4em;
-  margin-bottom: 0;
-  padding-bottom: .25em;
+  margin: 0;
+  padding: 0 0 .25em;
 }
 .social {
   font-size: 2.5em;
