--- a/css/main.css
+++ b/css/main.css
@@ -18,8 +18,8 @@ body {
   display: flex;
 }
 .container {
-  width: 100%;
   text-align: center;
+  width: 100%;
 }
 h1 {
   font-size: 4em;
@@ -32,19 +32,11 @@ h1 {
 }
 a {
   color: inherit;
+  transition: ease .2s
 }
 a:hover {
-  color: #999;
+  color: #2196f3;
 }
 i {
   padding: 0 .15em;
-}
-
-@media only screen and (max-width: 600px) {
-  h1 {
-    font-size: 6em;
-  }
-  .social {
-    font-size: 3.75em
-  }
 }
