--- a/css/main.css
+++ b/css/main.css
@@ -26,9 +26,8 @@ h1 {
   margin: 0;
   padding: 0 0 .25em;
 }
-.social {
+.social-icons {
   font-size: 2.5em;
-  text-align: center;
 }
 a {
   color: inherit;
@@ -38,5 +37,5 @@ a:hover {
   color: #2196f3;
 }
 i {
-  padding: 0 .15em;
+  margin: 0 .15em;
 }
