--- a/css/main.css
+++ b/css/main.css
@@ -18,13 +18,13 @@ body {
   display: flex;
 }
 .container {
+  margin: 0 auto;
   text-align: center;
-  width: 100%;
 }
 .name {
+  border-bottom: 1px solid #ccc;
   font-size: 4em;
-  margin: 0;
-  padding-bottom: .25em;
+  margin: 0 0 .2em;
 }
 .social-icons {
   font-size: 2.5em;
@@ -37,5 +37,21 @@ a:hover {
   color: #2196f3;
 }
 i {
-  margin: 0 .15em;
+  margin: 0 .25em;
+}
+@media only screen and (max-width: 700px) {
+  .name {
+    font-size: 3.5em;
+  }
+  .social-icons {
+    font-size: 2.1em;
+  }
+}
+@media only screen and (max-width: 500px) {
+  .name {
+    font-size: 3em;
+  }
+  .social-icons {
+    font-size: 1.8em;
+  }
 }
