--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+*,
+*:before,
+*:after {
+  box-sizing: border-box;
+}
 body,
 html {
   height: 100%;
@@ -15,6 +20,7 @@ body {
   display: flex;
   -ms-flex-align: center;
   font-family: "Slabo 27px", sans-serif;
+  font-size: 16px;
   min-height: 100%;
 }
 main {
