--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,9 @@
 *:after {
   box-sizing: border-box;
 }
+:root {
+  font-size: calc(1vw + 1vh + .25vmin);
+}
 body,
 html {
   height: 100%;
@@ -19,9 +22,7 @@ body {
   display: -webkit-flex;
   display: flex;
   -ms-flex-align: center;
-  font-family: "Slabo 27px", sans-serif;
-  font-size: 16px;
-  overflow: hidden;
+  font: 1em/1.25rem "Slabo 27px", sans-serif;
 }
 main {
   margin: 0 auto;
@@ -29,12 +30,12 @@ main {
 }
 div:first-child {
   border-bottom: 1px solid #ccc;
-  margin: 0 0 .75em;
+  margin-bottom: 1.25em;
 }
 h1 {
   font-size: 4em;
   font-weight: 500;
-  margin: 0;
+  margin-bottom: .5em;
 }
 div:last-child {
   display: inline-table;
@@ -42,7 +43,7 @@ div:last-child {
 }
 a {
   color: inherit;
-  margin: 0 .3em;
+  margin: 0 .5em;
   transition: ease .2s;
 }
 a:first-child {
@@ -57,28 +58,11 @@ a:focus {
 a:hover {
   color: #2196f3;
 }
-a span {
-  min-height: 1.2em;
-  min-width: 1.2em;
-}
+
 a span:last-child {
   clip: rect(1px, 1px, 1px, 1px);
+  max-height: 1px;
+  max-width: 1px;
   overflow: hidden;
   position: absolute;
-}
-@media only screen and (max-width: 700px) {
-  h1 {
-    font-size: 3.75em;
-  }
-  div:last-child {
-    font-size: 2.35em;
-  }
-}
-@media only screen and (max-width: 500px) {
-  h1 {
-    font-size: 3.5em;
-  }
-  div:last-child {
-    font-size: 2.175em;
-  }
 }
