--- a/css/main.css
+++ b/css/main.css
@@ -66,3 +66,15 @@ a span:last-child {
   overflow: hidden;
   position: absolute;
 }
+@media only screen and (max-width: 800px) {
+  body {
+    font-size: 1.3em;
+    line-height: 1.6rem;
+  }
+}
+@media only screen and (max-width: 500px) {
+  body {
+    font-size: 1.15em;
+    line-height: 1.4rem;
+  }
+}
