--- a/css/main.css
+++ b/css/main.css
@@ -30,16 +30,16 @@ main {
 }
 div:first-child {
   border-bottom: 1px solid #ccc;
-  margin-bottom: 1.25em;
 }
 h1 {
   font-size: 4em;
   font-weight: 500;
-  margin-bottom: .5em;
+  margin: 0 0 .5em;
 }
 div:last-child {
   display: inline-table;
   font-size: 2.5em;
+  padding-top: .5em;
 }
 a {
   color: inherit;
@@ -58,7 +58,6 @@ a:focus {
 a:hover {
   color: #2196f3;
 }
-
 a span:last-child {
   clip: rect(1px, 1px, 1px, 1px);
   max-height: 1px;
