--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: "Slabo27px";
+  src: url("fonts/Slabo27px-Regular.woff2") format("woff2"),
+    url("fonts/Slabo27px-Regular.woff") format("woff")
+}
 *,
 *:before,
 *:after {
@@ -22,7 +27,7 @@ body {
   display: -webkit-flex;
   display: flex;
   -ms-flex-align: center;
-  font: 1em/1.25rem "Slabo 27px", sans-serif;
+  font: 1em/1.25rem "Slabo27px", sans-serif;
 }
 main {
   margin: 0 auto;
