--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,6 @@
   font-family: "Slabo27px";
   src: url("fonts/Slabo27px-Regular.woff2") format("woff2"),
     url("fonts/Slabo27px-Regular.woff") format("woff"),
-    url("fonts/Slabo27px-Regular.svg") format('svg'),
     url("fonts/Slabo27px-Regular.ttf") format('truetype'),
     url("fonts/Slabo27px-Regular.eot?") format("embedded-opentype");
 }
@@ -24,13 +23,26 @@ html {
   -webkit-font-smoothing: antialiased;
 }
 body {
-  -webkit-align-items: center;
-  align-items: center;
   color: #444;
-  display: -webkit-flex;
-  display: flex;
+  font: 1em/1.25rem sans-serif;
+}
+.fonts-loaded body {
+  font-family: "Slabo27px", sans-serif;
+}
+.container {
+  -webkit-align-items: center;
   -ms-flex-align: center;
-  font: 1em/1.25rem "Slabo27px", sans-serif;
+  align-items: center;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-direction: column;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  height: 100vh;
+  -webkit-justify-content: center;
+  -ms-flex-pack: center;
+  justify-content: center;  
 }
 main {
   margin: 0 auto;
@@ -42,7 +54,8 @@ div:first-child {
 h1 {
   font-size: 4em;
   font-weight: 500;
-  margin: 0 0 .5em;
+  line-height: 1;
+  margin: 0 0 .2em;
 }
 div:last-child {
   display: inline-table;
