--- a/css/main.css
+++ b/css/main.css
@@ -177,3 +177,35 @@ hr {
     line-height: 1.4rem;
   }
 }
+
+/* adding Font Awesome CSS as a performance optimization */
+@font-face {
+  font-family: "FontAwesome";
+  src: url("../third-party/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0");
+  src: url("../third-party/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("../third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("../third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("../third-party/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("../third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+.fa {
+  display: inline-block;
+  font: normal normal normal 14px/1 FontAwesome;
+  font-size: inherit;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: auto;
+}
+.fa-twitter:before {
+  content: "\f099";
+}
+.fa-github:before {
+  content: "\f09b";
+}
+.fa-linkedin:before {
+  content: "\f0e1";
+}
+.fa-tumblr:before {
+  content: "\f173";
+}
+.fa-codepen:before {
+  content: "\f1cb";
+}
