--- a/css/main.css
+++ b/css/main.css
@@ -165,6 +165,49 @@ hr {
 .fadeInDown {
   animation-name: fadeInDown;
 }
+/* tooltip */
+[class^="tooltip"] {
+  position: relative;
+}
+[class^="tooltip"]:after {
+  background: #2196f3;
+  border-radius: 2px;
+  color: #fff;
+  content: attr(data-tooltip);
+  font-size: 1rem;
+  left: 50%;
+  opacity: 0;
+  padding: 5px 10px;
+  position: absolute;
+  top: 3em;
+  transform: translateX(-50%) translateY(-2px);
+  transition: all .2s ease-in-out;
+  white-space: nowrap;
+  z-index: 2;
+}
+[class^="tooltip"]:hover:after {
+  display: block;
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
+  visibility: visible;
+}
+.tooltip:before {
+  content: "";
+  height: 0;
+  left: 50%;
+  opacity: 0;
+  position: absolute;
+  top: 24px;
+  transform: translateX(-50%) translateY(-2px);
+  width: 0;
+  z-index: 3;
+}
+.tooltip:hover:before {
+  display: block;
+  opacity: 1;
+  transform: translateX(-50%) translateY(0);
+  visibility: visible;
+}
 @media only screen and (max-width: 800px) {
   body {
     font-size: 1.3em;
