--- a/css/main.css
+++ b/css/main.css
@@ -230,8 +230,8 @@ hr {
 /* adding Font Awesome CSS as a performance optimization */
 @font-face {
   font-family: "FontAwesome";
-  src: url("../third-party/font-awesome/fonts/fontawesome-webfont.eot?v=4.5.0");
-  src: url("../third-party/font-awesome/fonts/fontawesome-webfont.eot?#iefix&v=4.5.0") format("embedded-opentype"), url("../third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"), url("../third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0") format("woff"), url("../third-party/font-awesome/fonts/fontawesome-webfont.ttf?v=4.5.0") format("truetype"), url("../third-party/font-awesome/fonts/fontawesome-webfont.svg?v=4.5.0#fontawesomeregular") format("svg");
+  src: url("../third-party/font-awesome/fonts/fontawesome-webfont.woff2?v=4.5.0") format("woff2"),
+    url("../third-party/font-awesome/fonts/fontawesome-webfont.woff?v=4.5.0") format("woff");
   font-weight: normal;
   font-style: normal;
 }
