Fixed relative path 🐘

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -11,8 +11,8 @@
   <meta name="description" content="Matt Smith is a web developer who builds web applications to deliver engaging user experiences.">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="Matt Smith is a web developer who builds web applications to deliver engaging user experiences.">
-  <meta property="og:image" content="{{ site.default }}/images/avatar@2x.png">
-  <meta name="twitter:image" content="{{ site.default }}/images/avatar@2x.png">
+  <meta property="og:image" content="{{ site.default }}/public/avatar@2x.png">
+  <meta name="twitter:image" content="{{ site.default }}/public/avatar@2x.png">
   <meta name="twitter:creator" content="@AllThingsSmitty">
   <meta name="twitter:url" content="{{ site.url }}">
   <meta name="twitter:title" content="{{ site.title }}">
