Fixed relative path 👷🏼

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -37,7 +37,7 @@
   {% if page.image %}
     <meta property="og:image" content="/img/posts/{{ page.image }}">
   {% else %}
-    <meta property="og:image" content="/public/img/avatar@2x.png">
+    <meta property="og:image" content="/public/avatar@2x.png">
   {% endif %}
   {% if page.categories %}
     {% for category in page.categories limit:1 %}
