--- a/_includes/head.html
+++ b/_includes/head.html
@@ -56,10 +56,7 @@
   <meta name="twitter:creator" content="@AllThingsSmitty">
   <meta name="twitter:url" content="{{ site.url }}">
   <meta name="twitter:title" content="{{ site.title }}">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Bitter:400,400italic,700">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
   <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/public/apple-icon-57x57.png">
   <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/public/apple-icon-60x60.png">
@@ -77,5 +74,11 @@
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#2196f3">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/public/ms-icon-144x144.png">
+  
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Bitter:400,400italic,700">
+  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
+  
   <link rel="alternate" type="application/atom+xml" title="{{ site.title }}" href="{{ site.baseurl }}/atom.xml">
 </head>
