--- a/_includes/head.html
+++ b/_includes/head.html
@@ -75,8 +75,8 @@
   <meta name="msapplication-TileColor" content="#2196f3">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/public/ms-icon-144x144.png">
   
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Bitter:400,400italic,700">
-  <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans:400,600,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,400italic,700">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
   
