Added local web font references 🙌🏼

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -73,3 +73,17 @@ tbody tr:nth-child(odd) td,
 tbody tr:nth-child(odd) th {
   background: #f9f9f9;
 }
+
+/*b,
+strong {
+ font-family: "Bitter-Bold-700-Latin-Ext", "Bitter-Bold-700-Latin", serif;
+ font-style: normal;
+ font-weight: normal;
+}
+
+i,
+em {
+ font-family: "Bitter-Italic-400-Latin-Ext", "Bitter-Italic-400-Latin", serif;
+ font-style: normal;
+ font-weight: normal;
+}*/
