--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -7,7 +7,7 @@ h1, h2, h3, h4, h5, h6 {
   font-family: $header-font-family;
   font-weight: 700;
   line-height: 1.25;
-  margin-bottom: .5rem;
+  margin-bottom: 1rem;
   text-rendering: optimizeLegibility;
 }
 
