--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -38,7 +38,7 @@
     </div>
     
     <script src="{{ site.baseurl }}/js/fontfaceobserver.min.js"></script>
-    <script src="{{ site.baseurl }}/js/main.min.js"></script>
+    <script src="{{ site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
