--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -116,3 +116,49 @@ a[href^="#fnref:"] {
   font-size: 1.25rem;
   font-weight: 300;
 }
+
+
+.fa {
+  display: inline-block;
+  font: 1.25em/1 FontAwesome;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  text-rendering: auto;
+}
+
+a .fa + span {
+  clip: rect(1px, 1px, 1px, 1px);
+  max-height: 1px;
+  max-width: 1px;
+  overflow: hidden;
+  position: absolute;
+}
+
+.fa-twitter:before {
+  content: "\f099";
+}
+
+.fa-github:before {
+  content: "\f09b";
+}
+
+.fa-linkedin:before {
+  content: "\f0e1";
+}
+
+.fa-codepen:before {
+  content: "\f1cb";
+}
+
+.fa-google-plus:before {
+  content: "\f0d5";
+}
+
+.share a {
+  color: #7f919e;
+  margin: 0 .3rem
+}
+
+.share a:hover {
+  color: $blue;
+}
