--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -33,7 +33,7 @@
 
 // Meta data line below post title
 .post-date {
-  color: #9a9a9a;
+  color: $gray-3;
   display: block;
   margin-bottom: 1rem;
   margin-top: -.5rem;
