--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -155,8 +155,8 @@ a .fa + span {
 }
 
 .share a {
-  color: #7f919e;
-  margin: 0 .3rem
+  color: $gray-3;
+  margin: 0 .35rem
 }
 
 .share a:hover {
