--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,7 +1,8 @@
 $gray-1: #f9f9f9;
 $gray-2: #ccc;
-$gray-3: #767676;
-$gray-4: #515151;
+$gray-3: #9eabb3;
+$gray-4: #767676;
+$gray-5: #515151;
 $gray-5: #313131;
 
 $red: #ac4142;
