--- a/_includes/head.html
+++ b/_includes/head.html
@@ -25,7 +25,7 @@
   {% else %}
     <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
   {% endif %}
-  <meta property="og:image" content="{{ site.url }}/public/avatar@2x.png">
+  <meta property="og:image" content="{{ site.url }}/img/public/avatar@2x.png">
   {% if page.description %}
     <meta property="og:description" content="{{ page.description }}">
   {% else %}
@@ -56,25 +56,25 @@
   {% else %}
     <meta name="twitter:description" content="{{ site.description }}">
   {% endif %}    
-  <meta name="twitter:image" content="{{ site.url }}/public/avatar@2x.png">
+  <meta name="twitter:image" content="{{ site.url }}/img/public/avatar@2x.png">
 
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/public/apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/public/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/public/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/public/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/public/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/public/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/public/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/public/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/public/apple-icon-152x152.png">
-  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/public/apple-icon-180x180.png">
-  <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/public/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/public/favicon-16x16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/public/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/public/favicon-96x96.png">
+  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-precomposed.png">
+  <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/img/public/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/img/public/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/img/public/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/img/public/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/img/public/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/img/public/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png">
   <link rel="manifest" href="manifest.json">
   <meta name="msapplication-TileColor" content="#2196f3">
-  <meta name="msapplication-TileImage" content="{{ site.baseurl }}/public/ms-icon-144x144.png">
+  <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/public/ms-icon-144x144.png">
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,400italic,700">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:400,600,700">
