Fixed Twitter meta 🛀🏻

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -62,7 +62,7 @@
   {% endif %}
   
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/img/public/post-thumb.jpg">
+    <meta property="twitter:image" content="{{ site.url }}/img/public/post-thumb.jpg">
   {% else %}
     <meta name="twitter:image" content="{{ site.url }}/img/public/avatar@2x.png">
   {% endif %}
