--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
   {% endif %}
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/img/public/post-thumb.jpg">
+    <meta property="og:image" content="{{ site.url }}/img/post/sunset-home-office-min.jpg">
   {% else %}
     <meta property="og:image" content="{{ site.url }}/img/public/avatar@2x.png">
   {% endif %}
@@ -49,40 +49,20 @@
     <meta property="article:tag" content="{{ tag }}">
     {% endfor %}
   {% endif %}
-  
+
   <meta name="twitter:card" content="summary">
   <meta name="twitter:site" content="@allthingssmitty">
   <meta name="twitter:creator" content="@allthingssmitty">
-  <meta name="twitter:url" content="{{ site.url }}">
   <meta name="twitter:title" content="{{ page.title }} &middot; {{ site.title }}">
-  {% if page.description %}
-    <meta name="twitter:description" content="{{ page.description }}">
-  {% else %}
-    <meta name="twitter:description" content="{{ site.description }}">
-  {% endif %}
-  
-  {% if page.image %}
-    <meta property="twitter:image" content="{{ site.url }}/img/public/post-thumb.jpg">
-  {% else %}
-    <meta name="twitter:image" content="{{ site.url }}/img/public/avatar@2x.png">
-  {% endif %}
 
-  <link rel="apple-touch-icon-precomposed" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-touch-icon-precomposed.png">
-  <link rel="apple-touch-icon" sizes="57x57" href="{{ site.baseurl }}/img/public/apple-icon-57x57.png">
-  <link rel="apple-touch-icon" sizes="60x60" href="{{ site.baseurl }}/img/public/apple-icon-60x60.png">
-  <link rel="apple-touch-icon" sizes="72x72" href="{{ site.baseurl }}/img/public/apple-icon-72x72.png">
-  <link rel="apple-touch-icon" sizes="76x76" href="{{ site.baseurl }}/img/public/apple-icon-76x76.png">
-  <link rel="apple-touch-icon" sizes="114x114" href="{{ site.baseurl }}/img/public/apple-icon-114x114.png">
-  <link rel="apple-touch-icon" sizes="120x120" href="{{ site.baseurl }}/img/public/apple-icon-120x120.png">
-  <link rel="apple-touch-icon" sizes="144x144" href="{{ site.baseurl }}/img/public/apple-icon-144x144.png">
-  <link rel="apple-touch-icon" sizes="152x152" href="{{ site.baseurl }}/img/public/apple-icon-152x152.png">
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/img/public/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="128x128"  href="{{ site.baseurl }}/img/public/android-icon-128x128.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png">
   <link rel="manifest" href="manifest.json">
-  <meta name="msapplication-TileColor" content="#2196f3">
+  <meta name="msapplication-TileColor" content="#268bd2">
   <meta name="msapplication-TileImage" content="{{ site.baseurl }}/img/public/ms-icon-144x144.png">
   
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Bitter:400,400italic,700">
