--- a/_includes/head.html
+++ b/_includes/head.html
@@ -26,7 +26,7 @@
     <meta property="og:title" content="{{ site.title }} &middot; {{ site.tagline }}">
   {% endif %}
   {% if page.image %}
-    <meta property="og:image" content="{{ site.url }}/img/posts/sunset-home-office-min.jpg">
+    <meta property="og:image" content="{{ site.url }}/img/posts/sunset-home-office-min.png">
   {% else %}
     <meta property="og:image" content="{{ site.url }}/img/public/avatar@2x.png">
   {% endif %}
