--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,24 +13,24 @@
       <header class="masthead">
         <h3 class="masthead-title">
           <a href="{{ site.baseurl }}/" title="Home">{{ site.title }}</a>
-          <small>{{ site.tagline }}</small>
         </h3>
+        <nav>
+          <ul>
+            <li><a href="{{ site.baseurl }}/" title="Blog">Blog</a></li>
+            <li><a href="{{ site.baseurl }}/about" title="About">About</a></li>
+            <li><a href="{{ site.baseurl }}/contact" title="Contact">Contact</a></li>
+          </ul>
+        </nav>
         
-        <ul>
-          <li><a href="{{ site.author.twitter }}" rel="external"><span class="fa fa-twitter"></span><span>{{ site.author.follow }} Twitter</span></a></li>
-          <li><a href="{{ site.author.github }}" rel="external"><span class="fa fa-github"></span><span>{{ site.author.follow }} GitHub</span></a></li>
-          <li><a href="{{ site.author.linkedin }}" rel="external"><span class="fa fa-linkedin"></span><span>{{ site.author.follow }} LinkedIn</span></a></li>
-          <li><a href="{{ site.author.codepen }}" rel="external"><span class="fa fa-codepen"></span><span>{{ site.author.follow }} CodePen</span></a></li>
-          <li><a href="{{ site.author.google_plus }}" rel="external"><span class="fa fa-google-plus"></span><span>{{ site.author.follow }} Google+</span></a></li>
-        </ul>
-
+        <small>Web Dev, Mobile Strategist, Front-End Astronaut</small>
       </header>
 
       <main>
         {{ content }}
       </main>
 
-      <footer class="footer">
+      <footer>
+       
         <small>
           &copy; <time datetime="{{ site.time | date_to_xmlschema }}">{{ site.time | date: '%Y' }}</time> Matt Smith. All rights reserved.
         </small>
@@ -38,7 +38,7 @@
     </div>
     
     <script src="{{ site.baseurl }}/js/fontfaceobserver.min.js"></script>
-    <script src="{{ site.baseurl }}/js/main.min.js?v={{ site.time | date: '%s' }}"></script>
+    <script src="{{ site.baseurl }}/js/main.js?v={{ site.time | date: '%s' }}"></script>
     <script>
       (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
       (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
