Added color variables

--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -1,6 +1,6 @@
 $gray-1: #f9f9f9;
 $gray-2: #ccc;
-$gray-3: #9eabb3;
+$gray-3: #939393;
 $gray-4: #767676;
 $gray-5: #515151;
 $gray-5: #313131;
@@ -12,6 +12,7 @@ $green: #90a959;
 $cyan: #75b5aa;
 $blue: #268bd2;
 $brown: #8f5536;
+$white-sand: #eee;
 
 $root-font-family: "Bitter", serif;
 $root-font-size: 16px;
