--- a/_sass/_pagination.scss
+++ b/_sass/_pagination.scss
@@ -12,7 +12,7 @@
 
 // Pagination items can be `span`s or `a`s
 .pagination-item {
-  border: solid #eee;
+  border: 1px solid $white-sand;
   border-width: 1px 0;
   display: block;
   padding: 1rem;
