--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -3,56 +3,58 @@
 // Super small header above the content for site name and short description.
 
 .masthead {
-  margin-bottom: 3rem;
+  margin-bottom: 5rem;
   padding-bottom: .5rem;
   padding-top: 1rem;
-  
-  ul {
-    margin: .5em 0 0;
-    padding: 0;
-  
-    li {
-      display: inline-block;
-      list-style: none;
-      margin: 0 .5em;
-    }
-    
-    li:first-child {
-      margin-left: 0;
-    }
-    
-    li:last-child {
-      margin-right: 0;
-    }
-    a {
-      color: inherit;
-    }
+      
+  a {
+    color: inherit;
   }
   
   a:hover {
     color: $link-color;
     text-decoration: none;
   }
-}
-
-.masthead-title {
-  color: $gray-5;
-  margin-bottom: 0;
-  margin-top: 0;
-
-  a {
-    color: inherit;
+  
+  nav {
+    color: $gray-3;
+    float: right;
+    
+    ul {
+      margin: 0;
+      padding: 0;
+    
+      li {
+        display: inline-block;
+        font-family: $header-font-family;    
+        font-weight: 700; 
+        list-style: none;
+        margin: 0 .5em;
+      }
+    }
   }
-
+  
   small {
+    color: $gray-3;
+    display: block;
     font-size: 75%;
     font-weight: 400;
-    opacity: .5;
-    margin-left: .5em;
+    margin-top: .5rem;
+    text-transform: uppercase;
     
     @media (max-width: 44em) {
       display: block;
       margin: .25em 0 0;
     }
+  }
+}
+
+.masthead-title {
+  color: $gray-5;
+  display: inline-block;
+  margin: 0;
+
+  a {
+    color: inherit;
   }
 }
