--- a/_sass/_share.scss
+++ b/_sass/_share.scss
@@ -5,7 +5,7 @@
   margin-bottom: 2rem;
   
   a {
-    color: $gray-3;
+    color: inherit;
     margin-right: 1rem;
 
     &:hover {
@@ -27,5 +27,26 @@
     max-width: 1px;
     overflow: hidden;
     position: absolute;
+  }
+}
+
+
+.channels {
+  margin: 0;
+  padding: 0;
+
+  li {
+    display: inline-block;
+    list-style: none;
+    margin: 0 .5em;
+  }
+  
+  a {
+    color: inherit;
+  }
+  
+  a:hover {
+    color: $link-color;
+    text-decoration: none;
   }
 }
