--- a/_sass/_type.scss
+++ b/_sass/_type.scss
@@ -55,7 +55,7 @@ dd {
 hr {
   border: 0;
   border-bottom: 1px solid #fff;
-  border-top: 1px solid #eee;
+  border-top: 1px solid $white-sand;
   margin: 1.5rem 0;
   position: relative;
 }
