Updated format of secondary font 🐊

--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -36,10 +36,20 @@
 .post-tags {
   color: $gray-3;
   display: inline-block;
+  font-family: $secondary-font-family;
+  font-weight: 600;
   margin: 0 1rem 1rem 0;
   
   time {
     margin-left: .25em;
+  }
+}
+
+.more {
+  
+  a {
+    font-family: $secondary-font-family;
+    font-weight: 600;
   }
 }
 
