--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -20,7 +20,7 @@ $root-line-height: 1.5;
 
 $body-color: #515151;
 $body-bg: #fff;
-$header-font-family: "Open Sans", sans-serif;
+$secondary-font-family: "Open Sans", sans-serif;
 $link-color: $blue;
 
 $border-color: #e5e5e5;
