Refactored for accessibility 👏🏼

--- a/_includes/share-page.html
+++ b/_includes/share-page.html
@@ -2,13 +2,13 @@
   <h4>Share this post</h4>
 
   <a href="https://twitter.com/intent/tweet?text={{ page.title }}&url={{ site.url }}{{ page.url }}&via={{ site.brand }}&related={{ site.brand }}" rel="nofollow" target="_blank" title="Share on Twitter" onclick="window.open(this.href, 'twitter share', 'height=235,width=550');return false;">
-    <span class="fa fa-twitter"></span><span>{{ site.author.share_on }} Twitter</span>
+    <span class="fa fa-twitter"></span><span class="screen-reader-text">{{ site.author.share_on }} Twitter</span>
   </a>
 
-  <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook" onclick="window.open(this.href,'facebook-share', 'height=296,width=580');return false;"><span class="fa fa-facebook-official"></span><span>{{ site.author.share_on }} Facebook</span></a>
+  <a href="https://facebook.com/sharer.php?u={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Facebook" onclick="window.open(this.href,'facebook-share', 'height=296,width=580');return false;"><span class="fa fa-facebook-official"></span><span class="screen-reader-text">{{ site.author.share_on }} Facebook</span></a>
 
   <a href="https://plus.google.com/share?url={{ site.url }}{{ page.url }}" rel="nofollow" target="_blank" title="Share on Google+" onclick="window.open(this.href,'google-plus-share', 'height=490,width=530');return false;">
-    <span class="fa fa-google-plus"></span><span>{{ site.author.share_on }} Google+</span>
+    <span class="fa fa-google-plus"></span><span class="screen-reader-text">{{ site.author.share_on }} Google+</span>
   </a>
 
 </section>
