Refactored layout and class 👍🏼

--- a/_includes/social-channels.html
+++ b/_includes/social-channels.html
@@ -1,7 +1,9 @@
-<ul class="channels">
-  <li><a href="{{ site.author.twitter }}" rel="external"><span class="fa fa-twitter"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} Twitter</span></a></li>
-  <li><a href="{{ site.author.github }}" rel="external"><span class="fa fa-github"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} GitHub</span></a></li>
-  <li><a href="{{ site.author.linkedin }}" rel="external"><span class="fa fa-linkedin"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} LinkedIn</span></a></li>
-  <li><a href="{{ site.author.codepen }}" rel="external"><span class="fa fa-codepen"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} CodePen</span></a></li>
-  <li><a href="{{ site.author.google_plus }}" rel="external"><span class="fa fa-google-plus"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} Google+</span></a></li>
-</ul>
+<div class="social">
+   <ul>
+    <li><a href="{{ site.author.twitter }}" rel="external"><span class="fa fa-twitter"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} Twitter</span></a></li>
+    <li><a href="{{ site.author.github }}" rel="external"><span class="fa fa-github"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} GitHub</span></a></li>
+    <li><a href="{{ site.author.linkedin }}" rel="external"><span class="fa fa-linkedin"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} LinkedIn</span></a></li>
+    <li><a href="{{ site.author.codepen }}" rel="external"><span class="fa fa-codepen"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} CodePen</span></a></li>
+    <li><a href="{{ site.author.google_plus }}" rel="external"><span class="fa fa-google-plus"></span><span class="screen-reader-text">{{ site.author.follow_me_on }} Google+</span></a></li>
+  </ul>
+</div>
