--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,7 +29,7 @@
         <small>Web Dev, Mobile Strategist, Front-End Astronaut</small>
       </header>
 
-      <main id="content" role="main" tabindex="0">
+      <main id="content" role="main">
         {{ content }}
       </main>
 
