--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-<article class="post">
+<article class="post" tabindex="0">
  
   <h1 class="post-title">{{ page.title }}</h1>
   <div class="post-date">
