Updated relative path

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -57,7 +57,7 @@
 
   <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/img/public/apple-icon-180x180.png">
   <link rel="icon" type="image/png" sizes="192x192"  href="{{ site.baseurl }}/img/public/android-icon-192x192.png">
-  <link rel="icon" type="image/png" sizes="128x128"  href="{{ site.baseurl }}/img/public/android-icon-128x128.png">
+  <link rel="icon" type="image/png" sizes="144X144"  href="{{ site.baseurl }}/img/public/android-icon-144x144.png">
   <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/img/public/favicon-16x16.png">
   <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/img/public/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="96x96" href="{{ site.baseurl }}/img/public/favicon-96x96.png">
