--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -29,4 +29,5 @@ $large-breakpoint: 38em;
 $large-font-size: 20px;
 
 $code-font-family: Menlo, Monaco, "Courier New", monospace;
-$code-color: #bf616a;
+$code-color: #905;
+$code-background-color: #f9f9f9;
