--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -14,7 +14,7 @@ code {
   color: $code-color;
   font-size: 85%;
   padding: .25em .5em;
-  text-shadow: 0 1px white;
+  text-shadow: 0 1px #fff;
 }
 
 pre {
