--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -13,7 +13,7 @@
 footer {
   font-family: $secondary-font-family;
   font-weight: 600;
-  margin-bottom: 2rem;
+  margin: 2rem 0;
   text-align: center;
   
   a:hover {
